# CodeMind

./: .gitignore  README.md  pyproject.toml
benchmarks/: code_repair_tasks.json  coding_tasks.json
docs/: agent-post-training-plan.md
pico/: __init__.py  cli.py  context_manager.py  evaluator.py  memory.py  metrics.py  models.py  runtime.py  task_state.py  tools.py
post_training/: __init__.py  badcases.py  dpo_builder.py  reward.py  sft_builder.py  summary.py  trace_loader.py
scripts/: build_dpo_pairs.py  collect_resume_metrics.py  create_same_prompt_dpo_fixture.py  export_sft_dataset.py  report_badcases.py  run_deepseek_repeated_sampling.py  run_deepseek_trajectory_batch.py  run_large_scale_experiments.py  run_provider_experiments.py  smoke_deepseek.py  summarize_post_training.py  summarize_trajectories.py
tests/: test_context_manager.py  test_evaluator.py  test_memory.py  test_metrics.py  test_pico.py  test_run_store.py  test_safety_invariants.py  test_task_state.py
tests/fixtures/bench_repo_code/: math_utils.py  test_math_utils.py
tests/fixtures/bench_repo_collector/: collector.py  test_collector.py
tests/fixtures/bench_repo_patch/: sample.txt
tests/fixtures/bench_repo_readme/: README.md
tests/fixtures/bench_repo_slug/: test_text_utils.py  text_utils.py
